[all] fix stream.toList : but need modifiable list